[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


[project]
name = "pymox"
dynamic = ["version"]
description = "Python mocking on steroids"


[tool.poetry]
name = "pymox"
description = "Mock object framework"
packages = [
    {include = "mox"},
    {include = "mox/testing"}
]
version = "0.0.0"  # DO NOT CHANGE VERSION HERE
authors = ["Ivan Neto <ivan.cr.neto@gmail.com>"]
license = "Apache License, Version 2.0"
homepage = "http://pymox.rtfd.io"
repository = "https://github.com/ivancrneto/pymox"
classifiers = [
    "Environment :: Console",
    "Development Status :: 5 - Production/Stable",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Utilities"
]
keywords = [
    "mox", "mock", "test", "mocking", "unittest", "pymox",
]
readme = "README.md"

[tool.poetry.dependencies]
hatch = { version = "^1.9.1", python = ">=3.9,<4" }
hatchling = { version = "^1.21.0", python = ">=3.8,<4" }
hatch-semver = { version = "^1.0.1",  python = ">=3.9,<4" }
python = ">=3.8, <4"
build = "^1.0.3"

[tool.poetry.group.dev.dependencies]
pytest = [
    {version = "^7.1", python = ">=3.8"}
]
pytest-cov = [
    {version = "^4.0", python = ">=3.8"}
]
coverage = [
    {version = "^7.2", python = ">=3.8"}
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "__version__.py"

[tool.hatch.build.targets.sdist]
include = ["mox"]

[tool.hatch.build.targets.wheel]
packages = ["mox", "mox/testing"]

[tool.pytest.ini_options]
addopts = [
    "-vv",
    "--cov=mox",
    "--cov-branch",
    "--cov-report=xml",
    "--ignore-glob=*_helper.py",
    "test"
]
python_files = "*test*.py"


[tool.black]
line-length = 120
target-version = [ "py38" ]


[tool.isort]
atomic = true
case_sensitive = true
filter_files = true
import_heading_firstparty = "Internal imports"
import_heading_stdlib = "Python imports"
import_heading_thirdparty = "Pip imports"
known_startup = [
  "startup",
]
line_length = 120
lines_after_imports = 2
profile = "black"
py_version = "auto"
remove_redundant_aliases = true
sections = [
  "FUTURE",
  "STARTUP",
  "STDLIB",
  "THIRDPARTY",
  "FIRSTPARTY",
  "LOCALFOLDER",
]

[tool.bandit.assert_used]
excludes = ['*_test.py', '*/test_*.py']
